# Price-Monitor

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  alembic.ini  docker-compose.vps.yml  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260626_0001_initial.py  20260627_0002_product_search.py  20260627_0003_multi_offer_location.py  20260628_0004_remove_mercado_livre_magalu.py
price_monitor/: __init__.py  __main__.py  api.py  cli.py  config.py  db.py  models.py  schemas.py
price_monitor/notifications/: __init__.py  telegram.py
price_monitor/scrapers/: __init__.py  base.py  fetchers.py  parser.py  scraper.py  stores.py
price_monitor/search/: __init__.py  auth.py  base.py  matching.py  providers.py  service.py  setup.py
price_monitor/services/: __init__.py  monitor.py  settings.py
tests/: test_api.py  test_auth.py  test_migration_cleanup.py  test_monitor.py  test_parser.py  test_provider_configuration.py  test_search.py
