[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "product-price-monitor"
version = "0.1.0"
description = "Monitor de precos de qualquer produto em varias lojas"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.14,<2",
  "beautifulsoup4>=4.13,<5",
  "fastapi>=0.115,<0.120",
  "httpx>=0.28,<1",
  "playwright>=1.50,<2",
  "pydantic-settings>=2.7,<3",
  "sqlalchemy>=2.0,<3",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-cov>=6,<8",
  "ruff>=0.9,<1",
]

[project.scripts]
price-monitor = "price_monitor.cli:main"

[tool.setuptools.packages.find]
include = ["price_monitor*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
